src/index.css
:root {
    --primary-color: rgb(0, 110, 255);
    --primary-light-color: rgb(45, 136, 255);
    --primary-dark-color: rgb(0, 87, 201);
    --text-color: rgb(75, 75, 75);

    color: var(--text-color);
    background-color: white;
}

body {
    height: 100%;
    margin: 0;
}

h1 {
    font-family: "Press Start 2P", cursive;
    font-size: 3em;
    text-shadow: 4px 4px var(--primary-dark-color);
}

p {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1.2em;
    line-height: 1.5;
}

a {
    text-decoration: none;
}

a:link {
    color: var(--primary-color);
}

a:visited {
    color: var(--primary-color);
}

a:hover {
    color: var(--primary-light-color);
}

a:active {
    color: var(--primary-dark-color);
}

img {
    max-width: 100%;
}

.flexbox {
    display: flex;
    flex-flow: column;
    height: 100%;
    justify-content: center;
    align-items: center;
}

.hero {
    color: rgb(241, 241, 241);
    background-color: rgb(0, 110, 255);
    height: 100vh;
    padding: 0.3em;
    text-align: center;
}

.sub-title {
    font-family: "Press Start 2P", cursive;
    text-align: center;
    text-shadow: 2px 2px var(--primary-dark-color);
}

.divider {
    background-color: var(--primary-dark-color);
    height: 3px;
}

